--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ chardet==3.0.4
 click==7.1.2
 decorator==4.4.2
 Flask==1.1.2
+Flask-Cors==3.0.9
 gunicorn==20.0.4
 idna==2.10
 itsdangerous==1.1.0
@@ -11,5 +12,6 @@ MarkupSafe==1.1.1
 networkx==2.5
 numpy==1.19.3
 requests==2.24.0
+six==1.15.0
 urllib3==1.25.11
 Werkzeug==1.0.1
